--- a/style.css
+++ b/style.css
@@ -1,27 +1,102 @@
 html, body {
   max-width: 600px;
   margin: 0 auto;
-  font: 18px sans-serif;
+  font: 18px "Roboto Condensed", sans-serif;
+  background: #333;
 }
 
-img {
+body {
+  margin-top: 3em;
+}
+
+button {
+  font-size: inherit;
+  font: inherit;
+}
+
+header {
+  position: fixed;
+  left: 0;
+  top: 0;
   width: 100%;
-  height: auto;
+  height: 3em;
+  background: #EF5160;
+  z-index: 200;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1em;
+  font-weight: bold;
+  letter-spacing: .8em;
+  margin-top: 1em;
 }
 
 #imageCard {
   width: 100%;
-  background: #999;
+}
+
+#imageFile {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur( 1px );
+}
+
+#meta {
+  position: fixed;
+  left: 0;
+  bottom: 3em;
+  width: 50%;
+  background: rgba(0, 0, 0, .33);
+  color: white;
+  padding: 1em 4em;
+}
+
+#title {
+  font-size: 1em;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+
+#artist, #year, #more {
+  display: inline;
+}
+
+#artist:after, #year:after {
+  content: " \2022";
+}
+
+#price {
+  margin-top: .4em;
+  font-size: 2em;
+}
+
+#more a {
+  color: inherit;
+  background: rgba( 0, 0, 0, .5 );
+  font-style: italic;
+  text-decoration: none;
+  padding: .2em .5em;
 }
 
 #prevCard, #nextCard {
   position: fixed;
   top: 0;
-  width: 50px;
+  width: 1em;
   height: 100%;
-  background: #666;
+  background: none;
   border: none;
-  opacity: .5;
+  z-index: 100;
+  color: white;
+  font-size: 4em;
 }
 
 #prevCard {
@@ -33,8 +108,52 @@ img {
 }
 
 #commentCount {
+  position: fixed;
+  left: 0;
   width: 100%;
-  background: #666;
-  padding: 2em 1em;
+  height: 3em;
+  background: black;
+  color: white;
+  border: none;
+}
+
+#commentCount.open {
+  top: 3em;
+}
+
+#commentCount.closed {
+  bottom: 0;
+}
+
+#commentCard {
+  position: fixed;
+  top: 6em;
+  left: 0;
+  width: 100%;
+  background: white;
+}
+
+#commentList, #commentForm {
+  max-width: 600px;
+  padding: 0 4em;
+  margin: 2em auto;
+}
+
+#commentList {
+  list-style: none;
+}
+
+#commentList li + li {
+  padding-top: 2em;
+}
+
+#commentForm textarea {
+  width: 100%;
+  height: 6em;
+}
+
+#commentForm button {
+  width: 100%;
+  height: 2em;
   border: none;
 }
